# Sipra2.0

./: .env.example  .gitignore  Makefile  PPT_PROJECT_BRIEF.md  README.md  TESTING-GUIDE.md  docker-compose.yml  render.yaml
.github/workflows/: codeql.yml
datasets/realtime/: README.md  ai-predict.sample.request.json  ai-predict.sample.response.json  ambulance-pings.ndjson  drone-dispatch.sample.request.json  drone-dispatch.sample.response.json  trip.json  webhook-partners.sample.sql
datasets/test-scenarios/: SCENARIOS.md
datasets/test-scenarios/trips/: critical.json  late.json  multiple-simultaneous.json  normal.json  urgent.json
infra/: supabase-setup.sql
infra/docker/postgres/: init.sql  seed.sql
scripts/: chaos-flood-bridge.ps1  chaos-flood-bridge.sh  package-lock.json  package.json  play-scenario.ts  realtime-ingest.ts  run-demo-scenario.ts  simulate-gps.ts  test-handoff-banner.js  test-handoff-banner.ts  tsconfig.json
services/ai-brain/: Dockerfile  pyproject.toml
services/ai-brain/app/: main.py
services/ai-brain/tests/: test_predict.py
services/core-go/: Dockerfile  go.mod  go.sum
services/mocks/drone-dispatch/: Dockerfile  index.js  package-lock.json  package.json
services/mocks/fleet-receiver/: Dockerfile  index.js  package-lock.json  package.json
services/web/: .env.local.example  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
services/web/app/: globals.css  layout.tsx  page.tsx
services/web/lib/: MissionContext.tsx  (+7 more)
test-tools/: e2e-handoff.ts  simulate-gps.ts
(+133 files in other folders)
