[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sipra-ai-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "asyncpg>=0.29.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
